fixed wrong link on the comp guide.
git-svn-id: svn+ssh://svn.code.sf.net/p/openlcb/svn/trunk@4020 87536cb5-86f1-4cdc-8fc6-3f0f71bcd267

--- a/documents/OpenLCBDashboard.html
+++ b/documents/OpenLCBDashboard.html
@@ -342,7 +342,7 @@ HW1.0/SW1.1</span></font></font></p>
 			Technology</a> <br/>
 <a href="http://www.tch-technology.com/products/can_usb/">CAN/USB</a><br/>
 <a href="http://www.tch-technology.com/products/consumer/">32-Consumer</a>
-			<a href="http://http://www.tch-technology.com/manuals/comprehensive_guide_3_1.pdf">Comprehensive Guide
+			<a href="http://www.tch-technology.com/manuals/comprehensive_guide_3_1.pdf">Comprehensive Guide
 			Manual</a><br/>
 <a href="http://www.tch-technology.com/products/producer/">32-Producer</a><br/>
 <a href="http://www.tch-technology.com/products/producer_consumer/">24-Consumer-16-Produce</a><br/>
