changed links to point to http://registry.openlcb.org equivalents and added redirects
git-svn-id: svn+ssh://svn.code.sf.net/p/openlcb/svn/trunk@4132 87536cb5-86f1-4cdc-8fc6-3f0f71bcd267

--- a/web/index.html
+++ b/web/index.html
@@ -24,13 +24,8 @@
 contains various resources for the OpenLCB web site.</P>
 <P>The main page of the OpenLCB web site is <A HREF="../../index.html">here</A>.</P>
 <P>
-Local pages:
-<ul>
-<li><a href="viewuid.php">Formatted tables</a> of assigned unique ID ranges
-<li><a href="viewuidall.php">Single table</a> of assigned unique ID ranges
-<li><a href="uidxml.php">XML listing</a> of assigned unique ID ranges
-<li><a href="requestuidrange.php">Request</a> to be assigned a range
-</ul>
+The UniqueId Registry has moved to a new web site here: <a href="http://registry.openlcb.org">The UniqueId Registry</a>
+</P>
 <HR>
 <P>Site hosted by 
 <A HREF="http://sourceforge.net/projects/openlcb"><FONT COLOR="#000080"><IMG SRC="http://sflogo.sourceforge.net/sflogo.php?group_id=286373&amp;type=13" NAME="graphics2" ALIGN=ABSMIDDLE WIDTH=120 HEIGHT=30 BORDER=2></FONT></A>
