changed http://openlcb.org/ URLs in *.html files to http://old.openlcb.org/
git-svn-id: svn+ssh://svn.code.sf.net/p/openlcb/svn/trunk@4142 87536cb5-86f1-4cdc-8fc6-3f0f71bcd267

--- a/documents/CommonMessageDefinitions.html
+++ b/documents/CommonMessageDefinitions.html
@@ -32,7 +32,7 @@
 <BODY LANG="en-US" DIR="LTR">
 <H1>OpenLCB Common Message Types</H1>
 <P><B>This document is deprecated. Please see
-<A HREF="http://openlcb.org/trunk/specs/index.html">http://openlcb.org/trunk/specs/index.html</A>
+<A HREF="http://old.openlcb.org/trunk/specs/index.html">http://old.openlcb.org/trunk/specs/index.html</A>
 for more up to date information.</B></P>
 <P>The content listed here is in addition to the originating NID, MTI
 and Destination Node ID, if any. The full format of the message bytes
