--- a/documents/CommonMessageFormat.html
+++ b/documents/CommonMessageFormat.html
@@ -26,7 +26,7 @@
 <BODY LANG="en-US" DIR="LTR">
 <H1>OpenLCB Common Message Format</H1>
 <P><B>This document is deprecated.  Please see
-<A HREF="http://openlcb.org/trunk/specs/index.html">http://openlcb.org/trunk/specs/index.html</A>
+<A HREF="http://old.openlcb.org/trunk/specs/index.html">http://old.openlcb.org/trunk/specs/index.html</A>
 for more up to date information.</B></P>
 <P>A common message consists of several parts: 
 </P>
