--- a/documents/FirstLookDescription.html
+++ b/documents/FirstLookDescription.html
@@ -180,7 +180,7 @@ Control</B></U></FONT></P>
 accessories together in a coherent whole in a simple manner that lets
 model railroaders run their railroads. </FONT>
 </P>
-<P><FONT SIZE=4>More information is available at </FONT><A HREF="http://openlcb.org/"><FONT SIZE=4><U>http://openlcb.org</U></FONT></A><FONT SIZE=4>.
+<P><FONT SIZE=4>More information is available at </FONT><A HREF="http://old.openlcb.org/"><FONT SIZE=4><U>http://old.openlcb.org</U></FONT></A><FONT SIZE=4>.
 Come join us! </FONT>
 </P>
 <P>Site hosted by 
