--- a/documents/OpenLCBDashboard.html
+++ b/documents/OpenLCBDashboard.html
@@ -139,7 +139,7 @@ means that it is only partially planned and/or documentation is poor.</font></p>
 			<font size="2" style="font-size: 10pt">List</font></p>
 		</td>
 		<td colspan="3" width="57%" bgcolor="#e6e6e6" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: 1px double #808080; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0.03in">
-			<p><font size="2" style="font-size: 10pt"><a href="http://openlcb.org/trunk/specs/GenGlossaryTN.pdf">Glossary</a>
+			<p><font size="2" style="font-size: 10pt"><a href="http://old.openlcb.org/trunk/specs/GenGlossaryTN.pdf">Glossary</a>
 			– of common terms.</font></p>
 		</td>
 	</tr>
@@ -152,7 +152,7 @@ means that it is only partially planned and/or documentation is poor.</font></p>
 			<font size="2" style="font-size: 10pt">Doc</font></p>
 		</td>
 		<td colspan="3" width="57%" bgcolor="#e6e6e6" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: 1px double #808080; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0.03in">
-			<p><font size="2" style="font-size: 10pt"><a href="http://openlcb.org/trunk/specs/GenCommonInfoTN.pdf">CommonInfo</a>
+			<p><font size="2" style="font-size: 10pt"><a href="http://old.openlcb.org/trunk/specs/GenCommonInfoTN.pdf">CommonInfo</a>
 			– conventions in the documentation.</font></p>
 		</td>
 	</tr>
@@ -209,7 +209,7 @@ means that it is only partially planned and/or documentation is poor.</font></p>
 			<p><font size="2" style="font-size: 10pt">MTI</font></p>
 		</td>
 		<td colspan="3" width="57%" bgcolor="#e6e6e6" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: 1px double #808080; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0.03in">
-			<p><font size="2" style="font-size: 10pt"><a href="http://openlcb.org/trunk/specs/allocations/MtiAllocations.pdf">MTIAllocations</a>--
+			<p><font size="2" style="font-size: 10pt"><a href="http://old.openlcb.org/trunk/specs/allocations/MtiAllocations.pdf">MTIAllocations</a>--
 			low-level message types</font></p>
 		</td>
 	</tr>
@@ -218,7 +218,7 @@ means that it is only partially planned and/or documentation is poor.</font></p>
 			<p><font size="2" style="font-size: 10pt">Events</font></p>
 		</td>
 		<td colspan="3" width="57%" bgcolor="#e6e6e6" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: 1px double #808080; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0.03in">
-			<p align="left"><a href="http://openlcb.org/trunk/specs/allocations/EventIdAllocations.pdf"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: transparent">Well
+			<p align="left"><a href="http://old.openlcb.org/trunk/specs/allocations/EventIdAllocations.pdf"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: transparent">Well
 			Known Event ID Allocations</span></font></font></font></a></p>
 		</td>
 	</tr>
@@ -227,7 +227,7 @@ means that it is only partially planned and/or documentation is poor.</font></p>
 			<p><font size="2" style="font-size: 10pt">Datagrams</font></p>
 		</td>
 		<td colspan="3" width="57%" bgcolor="#e6e6e6" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: 1px double #808080; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0.03in">
-			<p align="left"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: transparent"><a href="http://openlcb.org/trunk/specs/allocations/DatagramProtocolAllocations.pdf">Datagram
+			<p align="left"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: transparent"><a href="http://old.openlcb.org/trunk/specs/allocations/DatagramProtocolAllocations.pdf">Datagram
 			Protocols Allocations</a> </span></font></font></font>
 			</p>
 		</td>
@@ -237,7 +237,7 @@ means that it is only partially planned and/or documentation is poor.</font></p>
 			<p><font size="2" style="font-size: 10pt">Streams</font></p>
 		</td>
 		<td colspan="3" width="57%" bgcolor="#e6e6e6" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: 1px double #808080; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0.03in">
-			<p align="left"><a href="http://openlcb.org/trunk/specs/allocations/StreamContentTypeAllocations.pdf"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: transparent">Stream
+			<p align="left"><a href="http://old.openlcb.org/trunk/specs/allocations/StreamContentTypeAllocations.pdf"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: transparent">Stream
 			Content Type Allocations</span></font></font></font></a></p>
 		</td>
 	</tr>
@@ -905,7 +905,7 @@ HW
 			</font><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt">and
 			</font></font></font><a href="http://www.openlcb.org/trunk/specs/GenEventTransportTN.pdf"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: #00ff00">TechNote</span></font></font></font></a><font color="#222222">
 			</font><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><br/>
-</font></font></font><a href="http://openlcb.org/trunk/specs/EventIdAllocations.pdf"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: #00ff00">Well
+</font></font></font><a href="http://old.openlcb.org/trunk/specs/EventIdAllocations.pdf"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: #00ff00">Well
 			Known Event ID Allocations</span></font></font></font></a></p>
 		</td>
 		<td width="16%" bgcolor="#ccffff" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: 1px double #808080; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0.03in">
@@ -930,7 +930,7 @@ target
 			</span></font><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt">and
 			</font></font></font><a href="http://www.openlcb.org/trunk/specs/GenDatagramTransportTN.pdf"><font color="#000000"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: #00ff00">TechNote</span></font></font></font></a></p>
 			<p align="left"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><br/>
-</font></font></font><a href="http://openlcb.org/trunk/specs/DatagramProtocolAllocations.pdf"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: #00ff00">Datagram
+</font></font></font><a href="http://old.openlcb.org/trunk/specs/DatagramProtocolAllocations.pdf"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: #00ff00">Datagram
 			Protocols Allocations</span></font></font></font></a><font color="#222222"><span style="background: #00ff00">
 			</span></font>
 			</p>
@@ -957,7 +957,7 @@ target
 			</font><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt">and
 			</font></font></font><font color="#000080"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><u><span style="background: #eb613d">TechNote</span></u></font></font></font></p>
 			<p align="left"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><br/>
-</font></font></font><a href="http://openlcb.org/trunk/specs/StreamContentTypeAllocations.pdf"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: #00cccc">Stream
+</font></font></font><a href="http://old.openlcb.org/trunk/specs/StreamContentTypeAllocations.pdf"><font color="#222222"><font face="Times-Roman, serif"><font size="2" style="font-size: 10pt"><span style="background: #00cccc">Stream
 			Content Type Allocations</span></font></font></font></a></p>
 		</td>
 		<td width="16%" bgcolor="#ccffff" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: 1px double #808080; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0.03in">
@@ -1363,7 +1363,7 @@ target
 			<p><font size="2" style="font-size: 10pt">Formatted tables</font></p>
 		</td>
 		<td colspan="2" width="41%" valign="top" bgcolor="#ffcc99" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: none; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0in">
-			<p><a href="http://openlcb.org/trunk/web/viewuid.php"><font size="2" style="font-size: 10pt">Tables</font></a></p>
+			<p><a href="http://old.openlcb.org/trunk/web/viewuid.php"><font size="2" style="font-size: 10pt">Tables</font></a></p>
 		</td>
 		<td width="16%" bgcolor="#ffcc99" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: 1px double #808080; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0.03in">
 			<p align="center"><font size="4" style="font-size: 14pt"><span style="background: #00ff00">Active</span></font></p>
@@ -1374,7 +1374,7 @@ target
 			<p><font size="2" style="font-size: 10pt">Single table</font></p>
 		</td>
 		<td colspan="2" width="41%" valign="top" bgcolor="#ffcc99" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: none; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0in">
-			<p><a href="http://openlcb.org/trunk/web/viewuidall.php"><font size="2" style="font-size: 10pt">Table</font></a></p>
+			<p><a href="http://old.openlcb.org/trunk/web/viewuidall.php"><font size="2" style="font-size: 10pt">Table</font></a></p>
 		</td>
 		<td width="16%" bgcolor="#ffcc99" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: 1px double #808080; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0.03in">
 			<p align="center"><font size="4" style="font-size: 14pt"><span style="background: #00ff00">Active</span></font></p>
@@ -1385,7 +1385,7 @@ target
 			<p><font size="2" style="font-size: 10pt">XML listing</font></p>
 		</td>
 		<td colspan="2" width="41%" valign="top" bgcolor="#ffcc99" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: none; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0in">
-			<p><a href="http://openlcb.org/trunk/web/uidxml.php"><font size="2" style="font-size: 10pt">Listing</font></a></p>
+			<p><a href="http://old.openlcb.org/trunk/web/uidxml.php"><font size="2" style="font-size: 10pt">Listing</font></a></p>
 		</td>
 		<td width="16%" bgcolor="#ffcc99" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: 1px double #808080; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0.03in">
 			<p align="center"><font size="4" style="font-size: 14pt"><span style="background: #00ff00">Active</span></font></p>
@@ -1400,7 +1400,7 @@ target
 			groups, and manufacturers can request a range of node IDs. They
 			are then responsible for these and their subsequent distribution. </font>
 			</p>
-			<p><a href="http://openlcb.org/trunk/web/requestuidrange.php"><font size="2" style="font-size: 10pt">Request
+			<p><a href="http://old.openlcb.org/trunk/web/requestuidrange.php"><font size="2" style="font-size: 10pt">Request
 			Unique Node ID Range</font></a></p>
 		</td>
 		<td width="16%" bgcolor="#ffcc99" style="border-top: none; border-bottom: 1px double #808080; border-left: 1px double #808080; border-right: 1px double #808080; padding-top: 0in; padding-bottom: 0.03in; padding-left: 0.03in; padding-right: 0.03in">
