--- a/schema/index.html
+++ b/schema/index.html
@@ -19,7 +19,7 @@ XML schema versions.
 For more information, see the Standard and Technical Notes 
 for each specific type.
 <ul>
-<li>CDI <a href="http://openlcb.org/specs/">Standard</a> and <a href="http://openlcb.org/specs/">Technical Note</a>.
+<li>CDI <a href="http://old.openlcb.org/specs/">Standard</a> and <a href="http://old.openlcb.org/specs/">Technical Note</a>.
 </ul>
 
 <HR>
