--- a/specs/index.html
+++ b/specs/index.html
@@ -379,16 +379,16 @@ Specific values are recorded and make available via OpenLCB web
 pages: 
 </P>
 <UL>
-	<LI><P STYLE="margin-bottom: 0cm"><A HREF="http://openlcb.org/trunk/web/viewuid.php">Formatted
+	<LI><P STYLE="margin-bottom: 0cm"><A HREF="http://old.openlcb.org/trunk/web/viewuid.php">Formatted
 	tables</A> of assigned unique ID ranges 
 	</P>
-	<LI><P STYLE="margin-bottom: 0cm"><A HREF="http://openlcb.org/trunk/web/viewuidall.php">Single
+	<LI><P STYLE="margin-bottom: 0cm"><A HREF="http://old.openlcb.org/trunk/web/viewuidall.php">Single
 	table</A> of assigned unique ID ranges 
 	</P>
-	<LI><P STYLE="margin-bottom: 0cm"><A HREF="http://openlcb.org/trunk/web/uidxml.php">XML
+	<LI><P STYLE="margin-bottom: 0cm"><A HREF="http://old.openlcb.org/trunk/web/uidxml.php">XML
 	listing</A> of assigned unique ID ranges 
 	</P>
-	<LI><P><A HREF="http://openlcb.org/trunk/web/requestuidrange.php">Request</A>
+	<LI><P><A HREF="http://old.openlcb.org/trunk/web/requestuidrange.php">Request</A>
 	to be assigned a range 
 	</P>
 </UL>
