changed http://www.openlcb.org URLs to http://old.openlcb.org
git-svn-id: svn+ssh://svn.code.sf.net/p/openlcb/svn/trunk@4143 87536cb5-86f1-4cdc-8fc6-3f0f71bcd267

--- a/documents/FAQ.html
+++ b/documents/FAQ.html
@@ -203,7 +203,7 @@ get an unique alias on CAN?</H3>
 node-id. It then sends a series of messages guaranteed to detect if
 another node-id has chosen the same alias. If this is the case, it
 will repeat the protocol with a new trial alias. See:</P>
-<P><A HREF="http://www.openlcb.org/trunk/documents/can/CanIDAllocation.html">http://www.openlcb.org/trunk/documents/can/CanIDAllocation.html</A></P>
+<P><A HREF="http://old.openlcb.org/trunk/documents/can/CanIDAllocation.html">http://old.openlcb.org/trunk/documents/can/CanIDAllocation.html</A></P>
 <H3 CLASS="western"><A NAME="whosent"></A>16. If OpenLCB events can
 be any arbitrary number (as long as its unique), how does the user
 know who sends what and where an event came from?</H3>
