--- a/documents/notes/ControlPoints.html
+++ b/documents/notes/ControlPoints.html
@@ -418,7 +418,7 @@ an event. Some of those would need to identify the control point, say
 purpose, though. Perhaps it better would be to use a Datagram, which
 allows up to 72 bytes (576 bits) of data. Datagrams are buffered so
 you would have the required atomic 'code line message'. See:
-<A HREF="http://www.openlcb.org/trunk/documents/DatagramProtocol.html">http://www.openlcb.org/trunk/documents/DatagramProtocol.html</A></P>
+<A HREF="http://old.openlcb.org/trunk/documents/DatagramProtocol.html">http://old.openlcb.org/trunk/documents/DatagramProtocol.html</A></P>
 <P>The alternative is to send a set of messages followed by a final
 'execute' message which applies all the previous messages if they are
 valid, and reports the result. This is likely to be more flexible,
@@ -426,7 +426,7 @@ and efficient, as you could then just send changes. (but perhaps not
 so prototypical)</P>
 <P>If you could please write up the control point as a Use-Case, that
 would be most helpful to us. See:
-<A HREF="http://www.openlcb.org/trunk/documents/OpenLCB-Use-Cases.pdf">http://www.openlcb.org/trunk/documents/OpenLCB-Use-Cases.pdf</A>
+<A HREF="http://old.openlcb.org/trunk/documents/OpenLCB-Use-Cases.pdf">http://old.openlcb.org/trunk/documents/OpenLCB-Use-Cases.pdf</A>
 for other examples -- you would just do the description of the
 problem, which you have mostly already done. It would be nice to know
 how big the code line can be. 
@@ -436,7 +436,7 @@ how big the code line can be.
 &lt;dpharris@telus.net&gt; wrote:</P>
 <P STYLE="margin-left: 2cm">If you could please write up the control
 point as a Use-Case, that would be most helpful to us. See:
-<A HREF="http://www.openlcb.org/trunk/documents/OpenLCB-Use-Cases.pdf">http://www.openlcb.org/trunk/documents/OpenLCB-Use-Cases.pdf</A>
+<A HREF="http://old.openlcb.org/trunk/documents/OpenLCB-Use-Cases.pdf">http://old.openlcb.org/trunk/documents/OpenLCB-Use-Cases.pdf</A>
 for other examples -- you would just do the description of the
 problem, which you have mostly already done. It would be nice to know
 how big the code line can be.</P>
