--- a/srpdrafts/response.html
+++ b/srpdrafts/response.html
@@ -42,7 +42,7 @@ CANUSB adapter from TCH Technology.  It was funded through private
 donations and the NMRA.  </SPAN>
 </P>
 <P><SPAN STYLE="font-weight: normal">The group's progress can be
-followed on our <A HREF="http://www.openlcb.org/trunk/documents/OpenLCBDashboard.html">Dashboard</A>,
+followed on our <A HREF="http://old.openlcb.org/trunk/documents/OpenLCBDashboard.html">Dashboard</A>,
 and we have made good progress on the documentation, and a near
 complete set of the basic protocols, including Event, Datagrams,
 Streams will be ready for review and presentation to the Board
@@ -286,8 +286,8 @@ September, including detailed negotiations over what should be in the
 final document. Don Voss took part, as did others. Many people,
 including Don and the authors of this note, made suggestions that
 were accepted, and other suggestions that were not accepted. The
-final documents (draft <A HREF="http://www.openlcb.org/trunk/srpdrafts/NMRA_20101007_S-9-x-1.pdf">standard
-and </A><A HREF="http://www.openlcb.org/trunk/srpdrafts/NMRA_20101007_TN-9-x-1.pdf">technical
+final documents (draft <A HREF="http://old.openlcb.org/trunk/srpdrafts/NMRA_20101007_S-9-x-1.pdf">standard
+and </A><A HREF="http://old.openlcb.org/trunk/srpdrafts/NMRA_20101007_TN-9-x-1.pdf">technical
 note</A>) were written by the four of us based on the discussions,
 edited and revised through multiple rounds of additional discussions,
 voted on and forwarded by Karl Kobel to Di Voss. 
