updated the Creative Commons License to 4.0 International changed the document dates to Apr 25, 2021 added the UniqueIdentifiers section for Manufacturers without a NMRA DCC Manufacturer ID corrected the 16 and 24 bit-field descriptions

--- a/Licensing.html
+++ b/Licensing.html
@@ -36,8 +36,8 @@ with the license terms to use these works from this web site.
 	modifying, or distributing the software. 
 	</P>
 	<LI><P>All documentation and other writings are made available
-	subject to the <A HREF="http://creativecommons.org/licenses/by-sa/3.0/us/">Creative
-	Commons Attribution-Share Alike 3.0 United States License</A>. If
+	subject to the <A HREF="http://creativecommons.org/licenses/by-sa/4.0/">Creative
+	Commons Attribution-Share Alike 4.0 International License</A>. If
 	you are uncertain about the terms of these licenses or how they
 	apply to what you want to do, you must consult OpenLCB or the
 	original author before copying, modifying, or distributing the works.
