add FDI schema 1.0 to schema directory

--- a/schema/index.html
+++ b/schema/index.html
@@ -19,7 +19,10 @@ XML schema versions.
 For more information, see the Standard and Technical Notes 
 for each specific type.
 <ul>
-<li>CDI <a href="http://old.openlcb.org/specs/">Standard</a> and <a href="http://old.openlcb.org/specs/">Technical Note</a>.
+<li>CDI <a href="https://github.com/openlcb/documents/blob/master/standards/ConfigurationDescriptionInformationS.pdf">Standard</a> 
+    and <a href="https://github.com/openlcb/documents/blob/master/standards/ConfigurationDescriptionInformationTN.pdf">Technical Note</a>.
+<li>FDI <a href="https://github.com/openlcb/documents/blob/master/standards/FunctionDescriptionInformationS.pdf">Standard</a> 
+    and <a href="https://github.com/openlcb/documents/blob/master/standards/FunctionDescriptionInformationTN.pdf">Technical Note</a>.
 </ul>
 
 <HR>
